<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Robot Controller</string>
    <string name="logo">Logo</string>
    <string name="angle_lab">Angle:</string>
    <string name="power_lab">Power:</string>
    <string name="direction_lab">Direc:</string>
    <string name="none"></string>
    <string name="front_lab">Front</string>
    <string name="front_right_lab">Front-Right</string>
    <string name="right_lab">Right</string>
    <string name="right_bottom_lab">Right-Bottom</string>
    <string name="bottom_lab">Bottom</string>
    <string name="bottom_left_lab">Left-Bottom</string>
    <string name="left_lab">Left</string>
    <string name="left_front_lab">Front-Left</string>
    <string name="center_lab">Center</string>
    <string name="select_device_lab">Select device</string>
    <string name="scan_devices_lab">Scan devices</string>
    <string name="settings_lab">Settings</string>
    <string name="turn_bluetooth_lab">Turn On/Off Bluetooth</string>
    <string name="bluetooth_off_lab">Bluetooth is OFF</string>
    <string name="bluetooth_on_lab">Bluetooth is ON at</string>
    <string name="rights_lab">http://zerokol.com</string>
    <string name="bluetooth_dis_start_lab">Bluetooth discovery Started</string>
    <string name="bluetooth_dis_comp_lab">Bluetooth discovery Completed</string>
    <string name="bluetooth_discovered_lab">Discovered</string>
    <string name="device_indicator_image_description">Describe the device status connection.</string>

</resources>